# School-Management-System

./: .gitignore  Dockerfile  README.md  Run.py  docker-compose.yml  launch.bat
Code/: ADD_MANAGE_USERS.py  ADD_MANAGE_USERS.ui  ADD_NEW_STAFF.py  ADD_NEW_STAFF.ui  ADD_NEW_STUDENT.py  ADD_NEW_STUDENT.ui  ADD_NEW_TEACHER.py  ADD_NEW_TEACHER.ui  COMPUTE_RESULTS.ui  CREATE_SUBJECTS.ui  CREATE_SUBJECTS_NEW.ui  CREATE_SUBJECTS_NEW_TEMP.py  CREATE_SUBJECTS_SEP.ui  CREATE_SUBJECTS_SEP_NW.py  ENTER_EXAMS.ui  Initialization.py  LOGIN_PAGE.py  LOGIN_PAGE.ui  MANAGE_STAFF.py  MANAGE_STAFF.ui  MANAGE_STUDENTS.py  MANAGE_STUDENTS.ui  MANAGE_TEACHERS.py  MANAGE_TEACHERS.ui  Main_Interface.ui  README.md  SIGN_UP_PAGE.ui  SMS_MAIN_INTERFACE.py  SMS_MAIN_INTERFACE.ui  SSC.py  SSC.ui  UPDATE_STAFF.py  UPDATE_STUDENT.py  UPDATE_SUBJECTS.py  UPDATE_SUBJECTS.ui  UPDATE_TEACHER.py  UPDATE_USERS.py  UPDATE_USERS.ui  init_sqlite.py  pyproject.toml
Code/QRC_FILES/: LOGIN_PAGE_GB_BG.PY  LOGIN_PAGE_GB_BG.qrc  LOGIN_PAGE_LBL2_BG.PY  LOGIN_PAGE_LBL2_BG.qrc  LOGIN_PAGE_LBL_BG.PY  LOGIN_PAGE_LBL_BG.qrc  LOGIN_PAGE_TB1_BG.qrc  LOGIN_PAGE_TB2_BG.PY  LOGIN_PAGE_TB2_BG.qrc  MANAGE_STUDENT_TB_BG.py  MANAGE_STUDENT_TB_BG.qrc  MANAGE_TEACHERS_LOGO.py  SIGN_UP_PAGE_GB_BG.qrc  SIGN_UP_PAGE_LBL2_BG.py  SIGN_UP_PAGE_LBL2_BG.qrc  SIGN_UP_PAGE_LBL_BG.py  SIGN_UP_PAGE_LBL_BG.qrc  SIGN_UP_PAGE_TB1_BG.py  SMS_ICON.py  SSC_BG.py  SSC_BG.qrc
Code/QRC_FILES/Exams/: COMPUTE_EXAMS_LOGO.qrc  CREATE_EXAMS.py  CREATE_EXAMS.qrc
Code/QRC_FILES/Main Interface/: SMS_BG.py  SMS_BG.qrc  SMS_ICON.qrc  (+2 more)
Code/mysql/: connector.py
(+26 files in other folders)
