[project]
name = "school-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mysql-connector-python>=9.6.0",
    "pyqt5>=5.15.11",
]

[tool.uv]
override-dependencies = [
    "pyqt5-qt5==5.15.2 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
    "pyinstaller>=6.19.0",
]
